# marrow

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
src/app/: CMakeLists.txt  logging.cpp  logging.hpp  main.cpp
src/core/: CMakeLists.txt  ids.hpp  numeric.hpp  result.hpp  uuid.cpp  uuid.hpp  version.cpp  version.hpp  visit.hpp
src/core/model/: field_type.hpp  layout.cpp  layout.hpp  project.cpp  project.hpp
tests/: CMakeLists.txt
tests/unit/: layout_tests.cpp  model_builders.hpp  uuid_tests.cpp  version_tests.cpp
